--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
 }
 
 body {
-  background-color: #8c52ff;
+  background: url(/images/pexels-sean-whang-804269.jpg);
+  background-size: cover;
+  background-position: center;
   font-family: "Poppins" sans-serif;
   display: flex;
   justify-content: center;
@@ -97,7 +99,11 @@ body {
 .atmosphere img {
   width: 70px;
 }
-.text {
+.humidity {
+  font-size: 22px;
+  margin-left: 5px;
+}
+.wind {
   font-size: 22px;
   margin-left: 5px;
 }
